--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="Generator">
-      <p id="MyLabel">Press Generate</p>
-      <button id="MyButn">Generate</button>
+    <div id="div1">
+      <p id="Result">Number guessing game</p>
     </div>
   </body>
   <script src="index.js"></script>
