Guessing Game VS

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
   </head>
   <body>
     <div id="div1">
-      <p id="Result">Number guessing game</p>
+      <p id="Title">Number guessing game</p>
+      <label id="player1">Player 1 Attemps: </label><br />
+      <label id="player2">Player 2 Attemps: </label><br />
+      <button id="b1" onclick="running = true;">Click me!</button>
+      <button id="ControlBtn">Show Result</button>
+      <label id="result"></label>
     </div>
   </body>
   <script src="index.js"></script>
