Guessing Game Battle

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <button id="ControlBtn" class="btn">Show Result</button>
         <button id="AssignNameBtn" class="btn">Assign Names</button>
       </div>
+      <p style="color: #575757">you can see the answer in console</p>
     </div>
     <script src="index.js"></script>
   </body>
